# ffmpeg-effects

./: ffmpeg-effects.cabal
cbits/: utils.c  utils.h
demos/: Probe.hs  Thumb.hs
src/Codec/: FFMpeg.hs
src/Codec/FFMpeg/: Codec.hs  Demux.hs  Format.hs  Frame.hs
src/Codec/FFMpeg/Internal/: Codec.hsc  Format.hsc  Frame.hsc  Util.hsc
